# WEB_HW9

./: authors.json  authors1.json  config.ini  connect.py  main.py  pyproject.toml  scrape_quotes.py  seeds.py  test.py
