[tool.poetry]
name = "web-hw9"
version = "0.1.0"
description = ""
authors = ["RHA1705 <garbarzroman47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
scrapy = "^2.12.0"
page = "^0.3"
lxml = "^5.3.0"
requests = "^2.32.3"
pymongo = "^4.10.1"
mongoengine = "^0.29.1"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
